--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,21 +1,26 @@
 <div class="container-flex mt-5">
-  <div class="h1 text-center"> SO Assignment</div>
+  <div class="h1 text-center"> SO Assignment
+    <span class="h4 text-center spinner-border" role="status" *ngIf="loading">
+      <span class="sr-only">Loading...</span>
+    </span>
+     </div> 
+     
 </div>
 <div class="wrapper container mt-5 mb-5">
   <form class="form" [formGroup]="contractForm">
     <div class="form-row">
-      <div class="form-group col-2">
+      <div class="form-group col-6">
         <!-- select SO organization -->
         <label for="batch">Select Batch</label>
-        <select id="batch" class="form-control" formControlName="batchId">
+        <select id="batch" class="form-control" formControlName="batchId" (change)="changeSoFilter(0,contractForm.value.batchId)">
           <option value='none'>Choose...</option>
           <option *ngFor="let item of allBatch" [value]="item['batchId']">{{item['batchNo']}}</option>
         </select>
       </div>
 
-      <div class="form-group col-2">
-        <label for="projmanager">Select PM</label>
-        <select id="projmanager" class="form-control" formControlName="batchId">
+      <div class="form-group col-6">
+        <label for="pm">Select PM</label>
+        <select id="pm" class="form-control" formControlName="personId" (change)="changeSoFilter(1,contractForm.value.personId)">
           <option value='none'>Choose...</option>
           <option *ngFor="let item of allProjectManager" [value]="item['personId']">
             <span *ngIf="item['firstName']">{{item['firstName']}} </span>
@@ -25,12 +30,15 @@
           </option>
         </select>
       </div>
-      <div class="form-group col-8">
+    </div>
+    <div class="form-row">
+     
+      <div class="form-group col-12">
         <!-- select SO organization -->
-        <label for="so">Select SO</label>
+        <label for="so">Select SO <span class="ml-2 text-danger" *ngIf="showNotification">Select Both of Above</span></label>
         <select id="so" class="form-control" formControlName="soId">
           <option value='none'>Choose...</option>
-          <option *ngFor="let item of allSo" [value]="item['soId']">{{item['name']}}</option>
+          <option *ngFor="let item of soUnderPM" [value]="item['soId']">{{item['name']}}</option>
         </select>
       </div>
     </div>
@@ -38,9 +46,7 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <!-- select district -->
-        <label for="district">Select District <span class="spinner-border p-1" role="status" *ngIf="loading">
-          <span class="sr-only">Loading...</span>
-      </span> </label>
+        <label for="district">Select District </label>
         <select id="district" class="form-control" formControlName="districtId" (change)="selectDistrict(contractForm.value.districtId)">
           <option value='none'>Choose...</option>
           <option *ngFor="let item of allDistrict" [value]="item['districtId']">{{item['name']}} </option>
@@ -59,8 +65,8 @@
     <div class="form-row">
       <div class="form-group col-6">
         <div class="form-row">
-          <label for="so">Select Schemes</label>
-          <select id="so" class="form-control" formControlName="schemeId">
+          <label for="scheme">Select Schemes</label>
+          <select id="scheme" class="form-control" formControlName="schemeId">
             <option selected value='none'>Choose...</option>
           <option *ngFor="let item of allSchemes;let i = index;" [value]="i">{{item['name']}}</option>
             
@@ -91,6 +97,7 @@
       </div>
     </div>
    
-    <button [routerLink]="['/contract']" routerLinkActive="router-link-active"  class="btn btn-primary btn-lg">Generate Contract</button>
+    <button routerLinkActive="router-link-active" 
+    class="btn btn-primary btn-lg" (click)="generateContract(contractForm.value)"> Generate Contract</button>
   </form>
 </div>
